# script-runner

./: .craft.yml  .dockerignore  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Dockerfile  MANIFEST.in  Makefile  README.md  example_config.yaml  example_config_combined.yaml  example_config_local.yaml  example_config_main.yaml  example_config_s4s.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/actions/install-python-deps/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: build-docker-image.yml  build.yml  frontend_ci.yml  python_ci.yml  release.yml  tests.yml
app/: app.py  auth.py  cli.py  config.schema.json  requirements.txt  utils.py
app/api/: routes.py
app/core/: function_base.py  module_loader.py
app/frontend/: package.json
app/frontend/src/: Header.tsx  Script.tsx  (+2 more)
examples/: app.py  generate_data_access_log.py  generate_data_kafka.py  requirements.txt
script_runner/: __init__.py  app.py  app_blueprint.py  approval_policy.py  approval_store.py  audit_log.py  auth.py  cli.py  config.py  config.schema.json  context.py  decorators.py  function.py  function_parameter.py  testutils.py  utils.py
script_runner/blueprints/: base_app_bp.py  main_bp.py  main_config_bp.py  region_bp.py  region_config_bp.py  static_routes_bp.py
script_runner/frontend/: package-lock.json  package.json
src/script_runner/: app.py  cli.py  config.py  module_loader.py
tests/: test_app.py  test_approval_policy.py  test_decorators.py  test_example.py  test_main_bp.py  test_utils.py
tests/blueprints/: test_base_app_bp.py  test_base_bp.py  test_main_bp.py  test_main_config_bp.py
tests/example/: __init__.py
tests/invalid_example/: __init__.py
(+36 files in other folders)
