[build-system]

requires = ["setuptools>=78.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[project]
name = "script-runner"
version = "0.1.0"
description = "A web application for running Python scripts."
readme = "README.md"
license = { text = "apache2" }
requires-python = ">=3.13"
dependencies = [
    "flask>=2.0.0",
    "gunicorn>=20.1.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
]

[project.scripts]
script-runner = "app.cli:main"
